--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <title>Resturant Website</title>
 <style>
   .carousel-item img{
-      max-height: 300px;
-      object-fit: cover;
+      max-height: 350px;
+      /* object-fit: cover; */
   }  
+  h5 {
+    color: white;
+    font-size: 20px;
+  }
 </style>
 <link rel="icon" href="f1.jpg">
 
@@ -62,39 +66,41 @@ data-mdb-ride="carousel"
   <!-- Single item -->
   <div class="carousel-item active">
     <img
-      src="f1.jpg"
+      src="m1.jpg"
       class="d-block w-100"
       alt="..."
     />
     <div class="carousel-caption d-none d-md-block">
-      <h5>طبق الأكل الأول</h5>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      <h5>الطبق الأول </h5>
+      <p>أشهى المأكولات الغربية والعربية .</p>
     </div>
   </div>
 
   <!-- Single item -->
   <div class="carousel-item">
     <img
-      src="f2.jpg"
+      src="m4.jpg"
       class="d-block w-100"
       alt="..."
     />
     <div class="carousel-caption d-none d-md-block">
-      <h5>طبق الأكل الثاني </h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <h5>الطبق الثاني  </h5>
+      <p>أشهى المأكولات الغربية والعربية .</p>
+
     </div>
   </div>
 
   <!-- Single item -->
   <div class="carousel-item">
     <img
-      src="f3.jpg"
+      src="m3.jpg"
       class="d-block w-100"
       alt="..."
     />
     <div class="carousel-caption d-none d-md-block">
-      <h5>طبق الأكل الثالث</h5>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      <h5>الطبق الثالث </h5>
+      <p>أشهى المأكولات الغربية والعربية .</p>
+
     </div>
   </div>
 </div>
@@ -128,8 +134,8 @@ data-mdb-ride="carousel"
                 <div class="row g-0">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Arabic Food</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">الطعام العربي</h5>
+                      <p class="card-text">تمتع بنكهة لذيذة من الطعام العربي.</p>
                       <p class="card-text"><small class="text-muted">Price 10$</small></p>
                     </div>
                   </div>
@@ -144,8 +150,8 @@ data-mdb-ride="carousel"
                 <div class="row g-0">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Arabic Food</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">الطعام الصيني</h5>
+                      <p class="card-text">تمتع بنكهة لذيذة من الطعام الصيني</p>
                       <p class="card-text"><small class="text-muted">Price 20$</small></p>
                     </div>
                   </div>
@@ -160,8 +166,8 @@ data-mdb-ride="carousel"
                 <div class="row g-0">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Arabic Food</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">الطعام الهندي</h5>
+                      <p class="card-text">تمتع بنكهة لذيذة من الطعام الهندي.</p>
                       <p class="card-text"><small class="text-muted">Price 10$</small></p>
                     </div>
                   </div>
@@ -175,8 +181,8 @@ data-mdb-ride="carousel"
                 <div class="row g-0">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Arabic Food</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">الطعام الفرنسي</h5>
+                      <p class="card-text">تمتع بنكهة لذيذة من الطعام الفرنسي.</p>
                       <p class="card-text"><small class="text-muted">Price 20$</small></p>
                     </div>
                   </div>
@@ -191,8 +197,8 @@ data-mdb-ride="carousel"
                 <div class="row g-0">
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Arabic Food</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">الطعام الروسي</h5>
+                      <p class="card-text">تمتع بنكهة لذيذة من الطعام الروسي.</p>
                       <p class="card-text"><small class="text-muted">Price 11$</small></p>
                     </div>
                   </div>
